--- a/borr.html
+++ b/borr.html
@@ -44,7 +44,7 @@
           	</ul>
 			<span>
             	<button data-intro="Permite ingresar a la cuenta" class="btn btn-outline-info btn-lg download-btn"
-              onclick="location.href='login.html'" type="button">Ingresar</button>
+              onclick="location.href='index.html'" type="button">Ingresar</button>
           	</span>
           	<span>
             	<button data-intro="Permite ingresar a la cuenta" class="btn btn-outline-info btn-lg download-btn"
