--- a/register.html
+++ b/register.html
@@ -4,7 +4,14 @@
 	<title>Animated Register Form</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
+   <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+   <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-analytics.js"></script>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   <body>
@@ -87,31 +94,12 @@
             <input type="button" class="btn" value="Registro" onclick="registrar()"></form>
       </div>
     </div>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
-
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-analytics.js"></script>
-
-<!-- Initialize Firebase -->
-   <script type="text/javascript" src="js/main.js"></script>
-   <script type="text/javascript" src="js/ind.js"></script>
 
 <!-- Funciones de registro-->
 <script>
-     function registrar(){
-    var email=document.getElementById('email').value;
-    var pass=document.getElementById('pass').value;
-    firebase.auth().createUserWithEmailAndPassword(email, pass)
-    .catch(function(error) {
-        var errorCode = error.code;
-        var errorMessage = error.message;
-        alert(errorMessage);
-    });
-}
-</script>
+
+</script>   
+<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/firebaseConfig.js"></script>
   </body>
 </html>
