Agregando efecto cambio de sesion

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class = "img">
 			<img src="img/access.svg">
 		</div>
-		<div class="login-content">
+		<div class="login-content" id="campos-login">
 			<form action="index.html">
 				<img src="img/log.jpg">
 				<h2 class="title">BIENVENIDO</h2>
@@ -54,10 +54,10 @@
             	   </div>
             	</div>
 				<input type="button" class="btn" value="Login" onclick="iniciarSesion()">
-					<!--Elemento de prueba-->
-					<h1 id="login"></h1>
 			</form>
-        </div>
+		</div>
+		<!--Elemento de prueba-->
+		<div id="login" style="display: none;"></div>
 	</div>
     </section>
     <footer data-intro="Puede seguirnos a las siguientes redes sociales" id="footer">
