cambios de henry

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             	   </div>
             	</div>
 				<input type="button" class="btn" value="Login" onclick="iniciarSesion()">
+				label>Si no posees cuenta, haz clic aqui</label>
+        <a href="register.html" class="btn"> Registrar</a>
 			</form>
 		</div>
 		<!--Elemento de prueba-->
