--- a/register.html
+++ b/register.html
@@ -91,7 +91,9 @@
               <input type="checkbox">
               <span>Acepto términos y condiciones del servicio</span>
             </label>
-            <input type="button" class="btn" value="Registro" onclick="registrar()"></form>
+            <input type="button" class="btn" value="Registro" onclick="registrar()">
+            <label>Si ya posees cuenta, haz clic aqui</label>
+            <a href="index.html" class="btn">Iniciar Sesion</a></form>
       </div>
     </div>
 
