agregando botones de redireccionamiento

--- a/register.html
+++ b/register.html
@@ -15,88 +15,89 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   <body>
-  	<img class="wave" src="img/wave.png">
-  	<div class="container">
-  		<div class="img">
-  			<img src="img/x1.svg">
-  		</div>
-  		<div class="login-content">
-  			<form id="form-registro">
-          <img src="img/log.jpg">
-          <h2 class="title">Ingrese sus datos</h2>
-              <div class="input-div one">
-                 <div class="i">
-                    <i class="fas fa-user"></i>
-                 </div>
-                 <div class="div">
-                    <h5>Nombre</h5>
-                    <input type="text" class="input">
-                 </div>
-              </div>
-              <div class="input-div one">
-                 <div class="i">
-                    <i class="fas fa-user"></i>
-                 </div>
-                 <div class="div">
-                    <h5>Apellido</h5>
-                    <input type="text" class="input">
-                 </div>
-              </div>
-              <div class="input-div one">
-                 <div class="i">
-                    <i class="fas fa-user"></i>
-                 </div>
-                 <div class="div">
-                    <h5>Telefono</h5>
-                    <input type="text" class="input">
-                 </div>
-              </div>
-              <div class="input-div one">
-                 <div class="i">
-                    <i class="fas fa-user"></i>
-                 </div>
-                 <div class="div">
-                    <h5>Email</h5>
-                    <input type="text" class="input" id="email">
-                 </div>
-              </div>
-              <div class="input-div one">
-                 <div class="i">
-                    <i class="fas fa-user"></i>
-                 </div>
-                 <div class="div">
-                    <h5>Direccion</h5>
-                    <input type="text" class="input">
-                 </div>
-              </div>
-              <div class="input-div pass">
-                 <div class="i"> 
-                    <i class="fas fa-lock"></i>
-                 </div>
-                 <div class="div">
-                    <h5>Contraseña</h5>
-                    <input type="password" class="input" id="pass">
-                 </div>
-              </div>
-              <div class="input-div pass">
-                 <div class="i"> 
-                    <i class="fas fa-lock"></i>
-                 </div>
-                 <div class="div">
-                    <h5>Repetir Contraseña</h5>
-                    <input type="password" class="input">
-                 </div>
-              </div>
-            <label class="checkbox">
-              <input type="checkbox">
-              <span>Acepto términos y condiciones del servicio</span>
-            </label>
-            <input type="button" class="btn" value="Registro" onclick="registrar()">
-            <label>Si ya posees cuenta, haz clic aqui</label>
-            <a href="index.html" class="btn">Iniciar Sesion</a></form>
+   <div id="regis">
+      <img class="wave" src="img/wave.png">
+      <div class="container">
+         <div class="img">
+            <img src="img/x1.svg">
+         </div>
+         <div class="login-content">
+            <form id="form-registro">
+            <img src="img/log.jpg">
+            <h2 class="title">Ingrese sus datos</h2>
+               <div class="input-div one">
+                  <div class="i">
+                     <i class="fas fa-user"></i>
+                  </div>
+                  <div class="div">
+                     <h5>Nombre</h5>
+                     <input type="text" class="input">
+                  </div>
+               </div>
+               <div class="input-div one">
+                  <div class="i">
+                     <i class="fas fa-user"></i>
+                  </div>
+                  <div class="div">
+                     <h5>Apellido</h5>
+                     <input type="text" class="input">
+                  </div>
+               </div>
+               <div class="input-div one">
+                  <div class="i">
+                     <i class="fas fa-user"></i>
+                  </div>
+                  <div class="div">
+                     <h5>Telefono</h5>
+                     <input type="text" class="input">
+                  </div>
+               </div>
+               <div class="input-div one">
+                  <div class="i">
+                     <i class="fas fa-user"></i>
+                  </div>
+                  <div class="div">
+                     <h5>Email</h5>
+                     <input type="text" class="input" id="email">
+                  </div>
+               </div>
+               <div class="input-div one">
+                  <div class="i">
+                     <i class="fas fa-user"></i>
+                  </div>
+                  <div class="div">
+                     <h5>Direccion</h5>
+                     <input type="text" class="input">
+                  </div>
+               </div>
+               <div class="input-div pass">
+                  <div class="i"> 
+                     <i class="fas fa-lock"></i>
+                  </div>
+                  <div class="div">
+                     <h5>Contraseña</h5>
+                     <input type="password" class="input" id="pass">
+                  </div>
+               </div>
+               <div class="input-div pass">
+                  <div class="i"> 
+                     <i class="fas fa-lock"></i>
+                  </div>
+                  <div class="div">
+                     <h5>Repetir Contraseña</h5>
+                     <input type="password" class="input">
+                  </div>
+               </div>
+               <label class="checkbox">
+               <input type="checkbox">
+               <span>Acepto términos y condiciones del servicio</span>
+               </label>
+               <input type="button" class="btn" value="Registro" onclick="registrar()">
+               <label>Si ya posees cuenta, haz clic aqui</label>
+               <a href="index.html" class="btn">Iniciar Sesion</a></form>
+         </div>
       </div>
-    </div>
-
+</div>
 <!-- Funciones de registro-->
 <script>
 
