terminado el registro

--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
   </script>
    <!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
+	<!-- para acceder al firestore -->
+	<!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>  VERSION NO VALE-->
+	<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-firestore.js"></script>
+	<!-- para la autenticacion de usuario -->
   <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
   <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 	<script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-analytics.js"></script>
+
+
+
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
