--- a/register.html
+++ b/register.html
@@ -8,6 +8,10 @@
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-auth.js"></script>
+
+    	<!-- para acceder al firestore -->
+	<!-- <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>  VERSION NO VALE-->
+	<script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-firestore.js"></script>
    <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
      <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-analytics.js"></script>
@@ -30,7 +34,7 @@
                  </div>
                  <div class="div">
                     <h5>Nombre</h5>
-                    <input type="text" class="input">
+                    <input type="text" class="input" id="nombre">
                  </div>
               </div>
               <div class="input-div one">
@@ -39,7 +43,7 @@
                  </div>
                  <div class="div">
                     <h5>Apellido</h5>
-                    <input type="text" class="input">
+                    <input type="text" class="input" id="apellido">
                  </div>
               </div>
               <div class="input-div one">
@@ -48,7 +52,7 @@
                  </div>
                  <div class="div">
                     <h5>Telefono</h5>
-                    <input type="text" class="input">
+                    <input type="text" class="input" id="telefono">
                  </div>
               </div>
               <div class="input-div one">
@@ -66,7 +70,7 @@
                  </div>
                  <div class="div">
                     <h5>Direccion</h5>
-                    <input type="text" class="input">
+                    <input type="text" class="input" id="direccion">
                  </div>
               </div>
               <div class="input-div pass">
